--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -20,7 +20,7 @@
         </ion-label>
     </div>
     <div class="border_bottom"></div>
-    <div class="main_head ion-padding-start">Appointment With
+    <div class="main_head ion-padding-start">Rendez-vous avec
     </div>
     <ion-item lines="none">
         <img slot="start" class="emp_img" src="../../assets/images/profile.png">
@@ -28,30 +28,16 @@
 
     </ion-item>
     <div class="border_bottom"></div>
-    <div class="main_head ion-padding-start">Appointment Time
+    <div class="main_head ion-padding-start">Heure de rendez-vous
     </div>
-    <div class="time ion-padding-start">{{date}}</div>
+    <div class="time ion-padding-start">{{date  | date:'dd-MM-yyyy HH:mm' }}</div>
     <div class="border_bottom"></div>
-    <div class="main_head ion-padding-start">Services You Selected<span class="ion-float-end ion-padding-end" (click)="addNew()">+Add New
-            Service</span>
+    <div class="main_head ion-padding-start">Services sélectionnés<span class="ion-float-end ion-padding-end" (click)="addNew()">+Ajouter un nouveau service</span>
     </div>
-    <ion-row class="ion-padding-start">
-        <ion-col size="9" class="service_name ion-no-padding">Smoothed Out Pixie<br><span>(Facial)</span></ion-col>
+    <ion-row class="ion-padding-start" *ngFor="let service of serviceSelect">
+        <ion-col size="9" class="service_name ion-no-padding"><br><span>(Facial)</span></ion-col>
         <ion-col size="2" class="price ion-no-padding">$30</ion-col>
-        <ion-col size="1" class="ion-no-padding"><img src="../../assets/images/minus.svg" height="18px" width="18px">
-        </ion-col>
-    </ion-row>
-    <ion-row class="ion-padding-start">
-        <ion-col size="9" class="service_name ion-no-padding">Ruby Fusion<br><span>(Color)</span></ion-col>
-        <ion-col size="2" class="price ion-no-padding">$20</ion-col>
-        <ion-col size="1" class="ion-no-padding"><img src="../../assets/images/minus.svg" height="18px" width="18px">
-        </ion-col>
-    </ion-row>
-    <ion-row class="ion-padding-start">
-        <ion-col size="9" class="service_name ion-no-padding">Custom 30 Minutes Facial<br><span>(Facial)</span>
-        </ion-col>
-        <ion-col size="2" class="price ion-no-padding">$30</ion-col>
-        <ion-col size="1" class="ion-no-padding"><img src="../../assets/images/minus.svg" height="18px" width="18px">
+        <ion-col size="1" class="ion-no-padding" (click)="removeService(service)"><img src="../../assets/images/minus.svg" height="18px" width="18px">
         </ion-col>
     </ion-row>
 
