--- a/src/app/services-modal/services-modal.component.html
+++ b/src/app/services-modal/services-modal.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
       <ion-title mode="ios">Selection des services</ion-title>
       <ion-buttons slot="end">
-        <ion-button (click)="closeModal()">close</ion-button>
+        <ion-button (click)="closeModal()"><ion-icon name="close-circle-outline"></ion-icon></ion-button>
       </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item *ngFor="let service of services">
       <ion-label>{{service?.name}}</ion-label>
-      <ion-checkbox slot="end" [(ngModel)]="select[service.id]"  [checked]="alreadySelect(service.id)"></ion-checkbox>
+      <ion-checkbox slot="end" [(ngModel)]="select[service.id]" checked="true"></ion-checkbox>
     </ion-item>
   </ion-list>
   <ion-button expand="block" (click)="addServices()" class="ion-margin-top" >Ajouter</ion-button>
