Modification de prise de rendez-vous.

--- a/src/app/booking-success/booking-success.page.html
+++ b/src/app/booking-success/booking-success.page.html
@@ -1,13 +1,12 @@
 <ion-content class="ion-text-center">
     <div>
         <p class=""><img src="../../assets/images/success.svg" height="160px" width="155px"> </p>
-        <p class="book_success ion-padding-bottom ">Your appointment is booked successfully</p>
-        <p class="ion-padding-bottom ion-padding-start ion-padding-end">You can check your booked appointments at
-            <br><span (click)="seeBooking()"> My
-                Appointment</span> section anytime
+        <p class="book_success ion-padding-bottom ">Votre rendez-vous a été pris avec succès</p>
+        <p class="ion-padding-bottom ion-padding-start ion-padding-end">Vous pouvez vérifier vos rendez-vous réservés sur
+            <br>La section <span (click)="seeBooking()">Rendez-vous</span> à tout moment.
         </p>
     </div>
 </ion-content>
 <ion-footer class="ion-no-border">
-    <ion-button expand="full" (click)="gotoHome()">Go to Home</ion-button>
+    <ion-button expand="full" (click)="gotoHome()">Aller à la page d'accueil</ion-button>
 </ion-footer>
