--- a/src/app/search-layout/search-layout.page.html
+++ b/src/app/search-layout/search-layout.page.html
@@ -12,27 +12,19 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <div class="main_head ion-padding-start">Résultats de recherche (53)<span class="ion-float-right ion-margin-end">
+    <div class="main_head ion-padding-start">Résultats de recherche {{ searchSalon.length }}<span
+            class="ion-float-right ion-margin-end">
             <img (click)="filter()" src="../../assets/images/filter.svg" height="18px" width="18px"></span>
     </div>
-    <ion-item lines="none" *ngFor="let item of searchSalon"> 
-        <img slot="start" class="salon_img" src="{{ item?.img }}">
-        <ion-label>
-            <a class="salon_name" (click)="salonProfile(item)" >{{ item?.name }}</a>
-            <p class="address">{{ item?.address }}</p>
-
-            <div class="rate_div">
-                <div class="bottom --flex-row-j!sb">
-                    <h3 class="rate_h">
-                        <ion-icon name="star" [ngClass]="rate >= 1 ? 'yellow-star' :'gray-star'">
-                        </ion-icon>
-                        <span class="ion-margin-bottom">{{ item?.rate }}</span>
-                        <img class="circle_icon" src="../../assets/images/circle.svg" height="6px" width="6px">
-                        <span class="ion-text-right"> {{ item?.km }}</span>
-                    </h3>
-
-                </div>
-            </div>
-        </ion-label>
-    </ion-item>
+    <div class="salon-item"  *ngFor="let item of searchSalon" style="background-image:url('http://157.230.232.108{{ item?.Logo?.url }}');background-size:cover;">
+        <ion-avatar>
+            <img src="http://157.230.232.108{{ item?.Logo?.url }}">         
+        </ion-avatar> 
+        <div class="salon-infos">
+            <div>
+                <a class="salon-name" (click)="salonProfile(item)" >{{ item?.name }}</a>                        
+                <p class="salon-addr">{{ item?.address }}</p>
+            </div>                           
+        </div>    
+    </div>
 </ion-content>
