--- a/src/app/search-layout/search-layout.page.scss
+++ b/src/app/search-layout/search-layout.page.scss
@@ -29,12 +29,11 @@ ion-content {
         padding-bottom: 7px;
     }
     ion-item {
+        height: 170px;
         margin-left: 17px;
         margin: 17px;
         border: 0.3px solid white;
-        box-shadow: 0px 0px 10px 1px #eeeeee;
         border-radius: 18px;
-        background: white;
         padding-left: 5px;
         .salon_img {
             border-radius: 12px;
@@ -43,17 +42,56 @@ ion-content {
             margin-right: 13px;
             margin-left: -8px;
         }
+        .item-native::after{   
+            position: absolute !important;
+            bottom: 0;
+        }  
         ion-label {
             padding-top: 15px;
             padding-bottom: 18px;
-            margin: 0;
+            position: relative;
+            margin: 0; 
             .salon_name {
                 font-size: 15px;
                 font-family: var(--bold-font);
                 color: var(--ion-black);
+                bottom: 0;
             }
             .address {
                 font-size: 13px;
+                font-family: var(--regular-font);
+                color: var(--gray-color);
+                padding-right: 10px;
+            }
+        }
+
+    }
+    .salon-item
+    {
+        height: 170px;
+        margin-left: 17px;
+        margin: 17px;
+        border: 0.75px solid black;
+        position: relative;
+        .salon-infos
+        {
+            height: 50px;
+            width: 100%;
+            background-color: var(--ion-black);
+            opacity: .75;
+            position: absolute;
+            bottom: 0;
+            .salon-name
+            {
+                font-size: 13px;
+                
+                font-family: var(--bold-font);
+                color: white;
+            }
+            .salon-addr
+            {
+                font-size: 11px;
+                font-style: oblique;
                 font-family: var(--regular-font);
                 color: var(--gray-color);
                 padding-right: 10px;
@@ -117,4 +155,4 @@ ion-content {
             }
         }
     }
-}
+} 
