--- a/src/app/services-modal/services-modal.component.html
+++ b/src/app/services-modal/services-modal.component.html
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item *ngFor="let service of services">
       <ion-label>{{service?.name}}</ion-label>
-      <ion-checkbox slot="end" [(ngModel)]="select[service.id]" checked="true"></ion-checkbox>
+      <ion-checkbox slot="end" [(ngModel)]="select[service.id]"></ion-checkbox>
     </ion-item>
   </ion-list>
   <ion-button expand="block" (click)="addServices()" class="ion-margin-top" >Ajouter</ion-button>
