Gestion des directions

--- a/src/app/appointment-detail/appointment-detail.page.html
+++ b/src/app/appointment-detail/appointment-detail.page.html
@@ -48,5 +48,5 @@
     </div>
 </ion-content>
 <ion-footer class="ion-no-border">
-    <ion-button expand="full">Get Direction</ion-button>
+    <ion-button (click)="getDirection()" expand="full">Get Direction</ion-button>
 </ion-footer>
