Modifier la page salon-profile

--- a/src/app/salon-profile/salon-profile.page.html
+++ b/src/app/salon-profile/salon-profile.page.html
@@ -16,22 +16,28 @@
       </div>
     </ion-slide>
   </ion-slides>
-  <div class="address ion-padding-start ion-padding-top">
-    {{salon?.adresse}}
+
+  <div class="salon-info">
+    <ion-grid>
+      <ion-row>
+        <ion-col  size="3">
+          <ion-avatar>
+            <img src="http://157.230.232.108{{logo?.url}}">         
+          </ion-avatar> 
+        </ion-col>
+        <ion-col> 
+          <ion-badge color="warning">
+            <ion-icon name="star" class="white-star "></ion-icon> {{salon?.rate}}
+          </ion-badge>
+
+          <div class="address">
+            <ion-icon name="location" class="white-star "></ion-icon>{{salon?.address}}
+          </div>
+
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
-  <p class="rate_div ion-padding-start">
-    <span class="rate_h">
-      <ion-icon name="star" [ngClass]="salon?.rate >= 1 ? 'yellow-star' :'gray-star'">
-      </ion-icon>
-      <ion-icon name="star" [ngClass]="salon?.rate >= 2 ? 'yellow-star' :'gray-star'">
-      </ion-icon>
-      <ion-icon name="star" [ngClass]="salon?.rate >= 3 ? 'yellow-star' :'gray-star'">
-      </ion-icon>
-      <ion-icon name="star" [ngClass]="salon?.rate >= 4 ? 'yellow-star' :'gray-star'">
-      </ion-icon>
-      <ion-icon name="star" [ngClass]="salon?.rate >= 5 ? 'yellow-star' :'gray-star'">
-      </ion-icon><span class="ion-text-right">2.6km</span>
-    </span>
 
     <div class="border_bottom"></div>
     <div class="address ion-padding-start">
@@ -123,15 +129,10 @@
       </div>
     </div>
                    
-    <ion-fab vertical="center"  horizontal="end"  slot="fixed"> 
+    <ion-fab vertical="bottom"  horizontal="end"  slot="fixed"> 
       <ion-fab-button color="success" (click)="call()"> 
         <ion-icon name="logo-whatsapp"></ion-icon>
       </ion-fab-button>   
     </ion-fab>
 
 </ion-content>
-
-<ion-footer class="ion-no-border">
-  <ion-item lines="none">
-  </ion-item>
-</ion-footer>
