--- a/src/app/search-layout/search-layout.page.html
+++ b/src/app/search-layout/search-layout.page.html
@@ -21,7 +21,7 @@
             <img src="http://157.230.232.108{{ item?.Logo?.url }}">         
         </ion-avatar>
         <ion-fab vertical="top" horizontal="end" slot="fixed">
-            <ion-fab-button (click)="location(item)">
+            <ion-fab-button size="small" color="light" (click)="location(item)">
               <ion-icon name="location-outline"></ion-icon>
             </ion-fab-button>
           </ion-fab>
